# clashOfScrums

./: CMakeLists.txt  Readme.txt
cmake/: coverage-clean.cmake.in
model/: CMakeLists.txt
model/include/model/: board.hxx  card.hxx  cardConfig.hxx  cardFactory.hxx  creature.hxx  deck.hxx  feature.hxx  playerContext.hxx  rules.hxx  spell.hxx
model/src/: board.cxx  card.cxx  creature.cxx  deck.cxx  feature.cxx  playerContext.cxx  rules.cxx  spell.cxx
model/test/: CMakeLists.txt  boardTest.cxx  deckTest.cxx  playerContextTest.cxx  test.cxx
resources/: cards.xml  rules.xml
src/: CMakeLists.txt  main.cxx
view/: CMakeLists.txt
view/gui/: CMakeLists.txt
view/gui/include/gui/: cardLabel.hxx  cardWidget.hxx  mainwindow.hxx
view/gui/src/: cardLabel.cxx  cardWidget.cxx  mainwindow.cxx  mainwindow.ui
view/shell/: CMakeLists.txt
view/shell/include/shell/: actions.hxx  shellDemo.hxx
view/shell/src/: shellDemo.cxx
view/shell/test/: CMakeLists.txt  test.cxx
view/src/: view.cxx
view/test/: CMakeLists.txt  test.cxx
